testdata/golden/sema/valid/entrypoint/stdin_builtin.sg
// Test: @entrypoint("stdin") with string param is valid
@entrypoint("stdin")
fn main(text: string) -> int {
    return 0;
}
