testdata/golden/sema/invalid/entrypoint/mode_env.sg
// Test: @entrypoint("env") is reserved for future use
// Expected: FUT7003
@entrypoint("env")
fn main() -> int {
    return 0;
}
